--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Angular UI ~ UI.Sortable Doc</title>
+  <title>Angular UI ~ UI.排序文件</title>
 
   <!-- Le css -->
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css"/>
@@ -47,7 +47,7 @@
     <p>This directive allows you to jQueryUI Sortable.</p>
 
     <p>
-      <a class="btn btn-outline-inverse btn-lg" href="https://github.com/angular-ui/ui-sortable">Code on Github</a>
+      <a class="btn btn-outline-inverse btn-lg" href="https://github.com/angular-ui/ui-sortable">代码在GitHub上</a>
       <a class="btn btn-outline-inverse btn-lg" href="https://github.com/angular-ui/ui-sortable/releases/tag/v0.14.3">
         <i class="glyphicon glyphicon-download-alt"></i> Download <small>(0.14.3)</small>
      </a>
