--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
     <h1>UI.Sortable</h1>
 
-    <p>This directive allows you to jQueryUI Sortable.</p>
+    <p>此指令允许您JQueryUI排序.</p>
 
     <p>
       <a class="btn btn-outline-inverse btn-lg" href="https://github.com/angular-ui/ui-sortable">代码在GitHub上</a>
       <a class="btn btn-outline-inverse btn-lg" href="https://github.com/angular-ui/ui-sortable/releases/tag/v0.14.3">
-        <i class="glyphicon glyphicon-download-alt"></i> Download <small>(0.14.3)</small>
+        <i class="glyphicon glyphicon-download-alt"></i> 下载 <small>(0.14.3)</small>
      </a>
     </p>
   </div>
@@ -79,10 +79,10 @@
               }(document, "script", "twitter-wjs");</script>
           </li>
           <li>
-              <!-- Place this tag where you want the +1 button to render. -->
+              <!--将这个标签放置在要渲染的+ 1按钮的位置. -->
               <div class="g-plusone" data-size="medium"></div>
 
-              <!-- Place this tag after the last +1 button tag. -->
+              <!-- 这地方的标签1标签after the last +按钮. -->
               <script type="text/javascript">
                   (function () {
                       var po = document.createElement('script');
@@ -103,7 +103,7 @@
 <div class="container">
 
   <section ng-app="sortableApp">
-  <h1>Sortable items</h1>
+  <h1>可选择的项目</h1>
   <div ng-controller="sortableController" class="section row">
     <div class="col-sm-offset-2 col-sm-4">
       <ul ui-sortable="sortableOptions" ng-model="list" class="list">
@@ -117,7 +117,7 @@
     </div>
   </div>
 
-  <h1>Connected items</h1>
+  <h1>连接项目</h1>
   <div ng-controller="connectedController" class="section row connectedItemsExample">
     <div class="col-sm-offset-2 col-sm-4">
       <ul ui-sortable="sortableOptions" ng-model="leftArray" class="list">
